# MinMaxLLM

./: .gitignore  CMakeLists.txt  README.md  README_developer.md  build.ps1  run_all_tests.ps1
examples/basic/: simple_cuda.cu
examples/elew_add/: host.cpp
include/: elew_add.cuh  test_utils.h
include/cpu_ops/: SimplifiedLayerNormalization_AVX2.h  SkipSimplifiedLayerNormalization_AVX2.h  decoder.h  elemwise_add.h  elemwise_mul.h  exp_avx2.h  gqa.h  linear.h  matmul.h  rmsnorm.h  rotary_embedding.h  self_attention.h  silu_avx2.h  softmax_avx2.h
include/models/: qwen3model.h
include/safetensors/: safetensors.h
include/tensor/: kvcache.h  safetensors.h  tensor.h
src/cpu_ops/: CMakeLists.txt  SimplifiedLayerNormalization_AVX2.cpp  SkipSimplifiedLayerNormalization_AVX2.cpp  decoder.cpp  elemwise_add.cpp  elemwise_mul.cpp  gqa.cpp  linear.cpp  matmul.cpp  rmsnorm.cpp  rotary_embedding.cpp  self_attention.cpp  silu_avx2.cpp  softmax_avx2.cpp
src/kernels/: elew_add.cu
src/models/: CMakeLists.txt  qwen3model.cpp
src/planner/: README.md
src/safetensors/: CMakeLists.txt  safetensors.cpp
src/tensor/: CMakeLists.txt  kvcache.cpp  safetensors.cpp  tensor.cpp
tests/: test_utils.cpp  test_utils.py
tests/cpu_ops/: CMakeLists.txt  test_SimplifiedLayerNormalization_AVX2.cpp  test_SkipSimplifiedLayerNormalization_AVX2.cpp  test_elemwise_add.cpp  test_elemwise_mul.cpp  test_gqa.cpp  test_linear.cpp  test_matmul.cpp  test_rmsnorm.cpp  test_rotary_embedding.cpp  test_silu_avx2.cpp  test_softmax_avx2.cpp  test_tensor.cpp
tests/modules/: CMakeLists.txt
tests/modules/Qwen3Decoder/: run_qwen3decoder.cpp
tests/modules/Qwen3MLP/: run_Qwen3MLP.cpp  test.py
tests/modules/Qwen3MLPGate/: run_Qwen3MLPGate.cpp  test.py
tests/modules/Qwen3Model/: run_qwen3model.cpp
tests/modules/Qwen3RMSNorm/: run_Qwen3RMSNorm.cpp  test.py
tests/modules/SelfAttention/: run_SelfAttention.cpp
tests/modules/safetensors/: run_safetensors.cpp
tests/tensor/: CMakeLists.txt  test_kvcache.cpp  test_tensor.cpp
utils/: extract_subgraphs.py  unique_ops_list.py
