# CMake file for cpu_ops tests
add_executable(test_matmul ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_matmul.cpp)
add_executable(test_rotary_embedding ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_rotary_embedding.cpp)
add_executable(test_gqa ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_gqa.cpp)
add_executable(test_SkipSimplifiedLayerNormalization_AVX2 ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_SkipSimplifiedLayerNormalization_AVX2.cpp)
add_executable(test_silu_avx2 ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_silu_avx2.cpp)
add_executable(test_softmax_avx2 ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_softmax_avx2.cpp)
add_executable(test_SimplifiedLayerNormalization_AVX2 ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_SimplifiedLayerNormalization_AVX2.cpp)
add_executable(test_rmsnorm ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_rmsnorm.cpp)
add_executable(test_elemwise_mul ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_elemwise_mul.cpp)
add_executable(test_elemwise_add ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_elemwise_add.cpp)
add_executable(test_linear ${CMAKE_SOURCE_DIR}/tests/cpu_ops/test_linear.cpp)

target_link_libraries(test_matmul cpu_ops)
target_link_libraries(test_rotary_embedding cpu_ops)
target_link_libraries(test_gqa cpu_ops)
target_link_libraries(test_SkipSimplifiedLayerNormalization_AVX2 cpu_ops)
target_link_libraries(test_silu_avx2 cpu_ops)
target_link_libraries(test_softmax_avx2 cpu_ops)
target_link_libraries(test_SimplifiedLayerNormalization_AVX2 cpu_ops)
target_link_libraries(test_rmsnorm cpu_ops)
target_link_libraries(test_elemwise_mul cpu_ops)
target_link_libraries(test_elemwise_add cpu_ops)
target_link_libraries(test_linear cpu_ops)

set_target_properties(test_matmul PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_rotary_embedding PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_gqa PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_SkipSimplifiedLayerNormalization_AVX2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_silu_avx2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_softmax_avx2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_SimplifiedLayerNormalization_AVX2 PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_rmsnorm PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_elemwise_mul PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_elemwise_add PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})
set_target_properties(test_linear PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR})